# personal-assistant

./: .env.example  .gitignore  Architecture.md  CONFIGURATION.md  DEPLOYMENT.md  Deploy-Beelink.ps1  Deploy-Server.ps1  Diagnose-DiscordOpenClaw.ps1  Diagnose-OpenClawDiscordIntermittent.ps1  README.md  Repair-OpenClawDiscordConfig.ps1  Test-DiscordAssistantPath.ps1  Troubleshoot-Server.ps1  pyproject.toml
config/: openclaw.assistant.example.json
diagnostics/TCDSVR1-20260710-104529/: Assistant_Health.txt  Assistant_Logs_Tail.txt  Assistant_SQLite_Recent_Notes.txt  Command_Locations.txt  Discord_Probe_SQLite_Results.txt  Gateway_Port_Listener.txt  Git_State_Before_Optional_Push.txt  Host_Info.txt  IP_Configuration.txt  Node_Processes.txt  OpenClaw_Assistant_References.txt  OpenClaw_Auth_OpenAI.txt  OpenClaw_Channels_List.txt  OpenClaw_Discord_Plugin_Runtime.txt  OpenClaw_Gateway_Status.txt  OpenClaw_Model_Fallbacks.txt  OpenClaw_Models_Status.txt  OpenClaw_Ollama_Models.txt  OpenClaw_Ollama_Plugin_Runtime.txt  OpenClaw_Personal_Assistant_Plugin_Runtime.txt  OpenClaw_Plugins_Enabled.txt  OpenClaw_Recent_Sessions.txt  OpenClaw_Redacted_Config.txt  OpenClaw_Status.txt  OpenClaw_Status_Usage.txt  OpenClaw_Version.txt  README.txt  Recent_Windows_Events.txt  Relevant_Services.txt  Scheduled_Tasks.txt  console-transcript.txt  discord-probe-messages.txt
diagnostics/TCDSVR1-openclaw-discord-20260710-113058/: Host_And_Gateway_Process.txt  OpenClaw_Doctor.txt  (+9 more)
openclaw/: assistant.skill.json
tests/: test_classification.py  test_parser.py  test_reports.py  test_sql_queries.py
(+13 files in other folders)
